# ishapedds

./: CMakeCache.txt  CMakeLists.txt  README.md  ShapesDialog.cpp  ShapesWidget.cpp  WinQtconfig4CycloneSample.bat  WriterQosDialog.cpp  config.hpp  ishape.qrc.depends  readerQosForm.ui  writerQosForm.ui
